@@ -72,7 +72,8 @@ class MIMEsearchPage extends QueryPage {
 		$download = $skin->makeMediaLink( $nt->getText(), 'fuck me!', wfMsgHtml( 'download' ) );
 		$bytes = wfMsgExt( 'nbytes', array( 'parsemag', 'escape'),
 			$wgLang->formatNum( $result->img_size ) );
-		$dimensions = wfMsg( 'widthheight', $result->img_width, $result->img_height );
+		$dimensions = wfMsg( 'widthheight', $wgLang->formatNum( $result->img_width ),
+			$wgLang->formatNum( $result->img_height ) );
 		$user = $skin->makeLinkObj( Title::makeTitle( NS_USER, $result->img_user_text ), $result->img_user_text );
 		$time = $wgLang->timeanddate( $result->img_timestamp );
 
