@@ -57,14 +57,14 @@ class MostlinkedCategoriesPage extends QueryPage {
 	}
 
 	function formatResult( $skin, $result ) {
-		global $wgContLang;
+		global $wgLang, $wgContLang;
 
 		$nt = Title::makeTitle( $result->namespace, $result->title );
 		$text = $wgContLang->convert( $nt->getText() );
 
 		$plink = $skin->makeLinkObj( $nt, htmlspecialchars( $text ) );
 
-		$nlinks = wfMsg( 'members', $result->value );
+		$nlinks = wfMsg( 'members', $wgLang->formatNum( $result->value ) );
 		return wfSpecialList($plink, $nlinks);
 	}
 }
